# ins

./: .gitignore  README.md  UKF.py  be_telemetry.py  filter_interface.py  foxglove.py  foxglove_wrapper.py  istate.py  lie.py  log_car_left_back.mcap  main.py  mau.py  measurement_models.py  messages.proto  messages_pb2.py  models.py  orientation.py  post_scaling.py  pyproject.toml  quaternion.py  run_esekf.py  schemas.py  sigma_points.py  state.py  telem_min_working.py  tuning.md  tuning.py  ufk_test.mcap  ukf.py  utils.py
adis_mcap/: gnss_challenging_env_2025-05-07 15:32:53.mcap  log_auto_square_2025-05-07 14:55:13.mcap  log_dive_2min_2025-05-07 15:06:13.mcap  log_grid_01_05.mcap  log_grid_01_05_scaled.mcap  log_w_diving_01_05.mcap  log_w_diving_mission_2_01_05.mcap
esekf/: __init__.py  esekf.py  models.py  state.py
mcap/: corner_dive.mcap  demo_2025-01-19_18-07-59.mcap  log_21_03.mcap  output.mcap
notebooks/: Untitled.ipynb
plotting/: plot.py
qukf/: __init__.py  models.py  qukf.py  state.py
tests/: test_rotations.py
ukf_manif/: models.py  ukf_manif.py
ukfm/: __init__.py  models.py  state.py  ukfm.py
